# OperationSys_CP

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
include/: SharedMemory.cpp  SharedMemory.hpp  SharedTypes.hpp
server/: CMakeLists.txt  Game.cpp  Game.hpp  Server.cpp  Server.hpp  main.cpp
